--- a/style.css
+++ b/style.css
@@ -24,8 +24,7 @@ header, section {
 }
 
 header img {
-    width: 200px;
-    max-width: 100%;
+    width: 150px;
     height: auto;
     border-radius: 50%;
     border: 2px solid #ff69b4;
@@ -69,4 +68,12 @@ a:hover {
     margin-bottom: 1rem;
 }
 
+.title {
+    border-bottom: 2px solid #ff69b4;
+    width: fit-content;
+    margin: 0 auto 1rem auto;
+}
 
+footer {
+    font-size: 18px;
+}
